EWE: fixed issues with login error messages and Added back the progress spinner and fixed issue with time picker not showing data.

--- a/Epi.Web/Content/css/ewe.css
+++ b/Epi.Web/Content/css/ewe.css
@@ -1213,7 +1213,7 @@ button.edit {
 
 /*Forgot Password*/
 #forgotpwd{width: 310px; padding: 0px 30px 10px 20px; border:1px solid #4d74a4; margin: 10px 30px 30px 0; }
-#forgotpwd input[type="email"] {height:30px; width:260px; font-size:12pt;}
+#forgotpwd input  {height:30px; width:260px; font-size:12pt;}
 #forgotpwd button {height: 30px; padding: 4px 6px 4px 4px; margin-left:2px; width:80px; font-size:12pt; font-weight:bold;}
 
 /*Reset Password*/
